# nym-bridges

./: Cargo.toml  Dockerfile  LICENSE  README.md  bridges.template.toml
.github/: dependabot.yml
.github/workflows/: build-and-package.yml  coverage.yaml  rust.yml
bridge-cfg/: Cargo.toml  README.md  build.rs
bridge-cfg/src/: bridge_client_config.rs  bridge_config.rs  main.rs  node_config.rs
bridge-cfg/test/: config.toml
bridge-tools/: Cargo.toml  README.md
bridge-tools/src/: client.rs  client_udp.rs  udp_recv.rs  udp_sender.rs
crates/bridge-cfg/: Cargo.toml  README.md  build.rs
crates/bridge-cfg/src/: bridge_config.rs  main.rs  node_config.rs
crates/bridge-cfg/test/: config.toml
crates/bridge-tools/: Cargo.toml  README.md
crates/bridge-tools/src/: client.rs  client_udp.rs  udp_echo.rs  udp_recv.rs  udp_sender.rs
crates/nym-bridge/: Cargo.toml  README.md
crates/nym-bridge/src/: main.rs
crates/nym-bridges/: Cargo.toml
crates/nym-bridges-types/: Cargo.toml  README.md  uniffi.toml
crates/nym-bridges-types/src/: lib.rs
crates/nym-bridges/src/: config.rs  connection.rs  error.rs  forward.rs  lib.rs  ping.rs  stats.rs
crates/nym-bridges/src/transport/quic/: mod.rs
crates/nym-bridges/src/transport/tls/: certs.rs  mod.rs
nym-bridge/: Cargo.toml  README.md
nym-bridge/service/: nym-bridge.service
nym-bridge/src/: main.rs
pkg/: README.md
pkg/debian/: README.md  nym-bridge.service  postinst  postrm
pkg/doc/: description.txt  nym-bridge.1
src/: config.rs  connection.rs  error.rs  lib.rs  session.rs  transport.rs
src/transport/quic/: mod.rs
src/transport/tls/: certs.rs  mod.rs
test-env/: README.md  docker-compose.yml
test-env/test-config/: client_quic.toml  client_tls.toml  server.toml
test-env/test-config/keys/: ed25519_identity
test-env/test-config/local/: client_both.toml  client_quic.toml  client_tls.toml  server.toml
test-env/wg0/: entrypoint.sh  wg-q0.conf  wg0.conf
test-env/wg1/: entrypoint.sh  wg-q1.conf  wg1.conf
tests/: integration.rs
tests/sender/: mod.rs
