
# [PROJECT_DIR]/Cargo.toml
[workspace]
resolver = "3"
members = ["bridge-cfg", "nym-bridge", "bridge-tools"]

[package]
authors = ["Nym Technologies SA"]
name = "nym-bridges"
version = "0.1.2"
edition = "2024"

[lib]
name = "nym_bridges"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
bs58 = "0.5.1"
bytes = "1"
ed25519-dalek = { version = "3.0", features = ["pkcs8", "alloc", "pem", "rand_core"]}
futures = "0.3.31"
getrandom = { version = "0.3", default-features = false }
hex = "0.4.3"
lru-slab = "0.1.2"
lazy_static = "1"
log = "0.4"
once_cell = "1.19"
pem = "3.0.5"
pin-project-lite = "0.2"
quinn = {version = "0.11", default-features = false, features = ["ring", "rustls", "runtime-tokio"] }
quinn-proto = {version = "0.11", default-features = false, features = ["rustls"] }
rand = "0.8"
rcgen = "0.14"
ring = "0.17"
rustc-hash = "2"
rustls = { version = "0.23.5", default-features = false, features = ["std", "ring", "logging"] }
rustls-pki-types = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slab = "0.4.6"
socket2 = ">=0.5, <0.7"
thiserror = "2.0.3"
tinyvec = { version = "1.1", features = ["alloc"] }
tokio = {version = "1.45", features=["full"]}
tokio-rustls = { version ="0.26", features = ["ring", "tls12", "logging"], default-features=false}
tokio-util = {version="0.7.15", features=["full"]}
toml = "0.9"
tracing = { version = "0.1.10", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
uuid = "1.17"
x509-parser = { version = "0.17.0", features = ["verify"] }
webpki-roots = "0.26"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

# ------------------------------------------------------------------------------
# START DEBIAN PACKAGING
#
# Configurations for the cargo-deb cargo plugin which builds Debian packages in
# target/debian/ when invoked with: cargo deb.
#
# Note that as the postinst script uses the adduser command we declare a
# dependency on the adduser package to keep the lintian tool happy.
#
# See:
#   - https://github.com/mmstick/cargo-deb
#   - https://lintian.debian.org/tags/systemd-service-file-outside-lib.html
#   - https://www.debian.org/doc/debian-policy/ch-files.html#behavior

[package.metadata.deb]
name = "nym-bridge"
maintainer = "Nym Technologies SA <contact@nymtech.net>"
priority = "optional"
section = "net"
license-file = ["LICENSE", "0"]
extended-description-file = "pkg/doc/description.txt"
depends = "$auto, adduser"
maintainer-scripts = "pkg/debian/"
copyright = "Copyright (c) 2025, Nym Technologies SA. All rights reserved."
assets = [
    [
        "target/release/nym-bridge",
        "/usr/bin/nym-bridge",
        "755",
    ],
    [
        "target/release/bridge-cfg",
        "/usr/bin/bridge-cfg",
        "755",
    ],
    [
        "bridges.template.toml",
        "/usr/share/doc/nym-bridge/bridges.template.toml",
        "644",
    ],
    [
        "pkg/doc/nym-bridge.1",
        "/usr/share/man/man1/nym-bridge.1",
        "644",
    ],
]
systemd-units = { unit-name = "nym-bridge", stop-on-upgrade = true }

# END DEBIAN PACKAGING
# ------------------------------------------------------------------------------
