
# [PROJECT_DIR]/Cargo.toml
[workspace]
resolver = "3"
members = [
    "crates/nym-bridges-types",
    "crates/nym-bridges",
    "crates/bridge-cfg",
    "crates/nym-bridge",
    "crates/bridge-tools",
]

[workspace.package]
authors = ["Nym Technologies SA"]
version = "0.2.0"
edition = "2024"
description = "Pluggable transport library for securing and obfuscating Nym VPN traffic."
license = "AGPL-3.0-only"
repository = "https://github.com/nymtech/nym-bridges"
homepage = "https://nymtech.net"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22.1"
bip39 = "2.2"
bs58 = "0.5.1"
bytes = "1"
clap = { version = "4", features = ["derive", "string"] }
ed25519-dalek = { version = "3.0", features = [
    "pkcs8",
    "alloc",
    "pem",
    "rand_core",
    "digest",
] }
futures = "0.3.31"
getrandom = { version = "0.4", default-features = false }
hex = "0.4.3"
lru-slab = "0.1.2"
lazy_static = "1"
once_cell = "1.19"
pem = "3.0.5"
pin-project-lite = "0.2"
quinn = { version = "0.11", default-features = false, features = [
    "ring",
    "rustls",
    "runtime-tokio",
] }
quinn-proto = { version = "0.11", default-features = false, features = [
    "rustls",
] }
rand = "0.10"
rand_chacha = "0.10"
rcgen = "0.14"
reqwest = { version = "0.13.4", default-features = false }
ring = "0.17"
rustc-hash = "2"
rustls = { version = "0.23.5", default-features = false, features = [
    "std",
    "ring",
    "logging",
] }
rustls-pki-types = "1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "3.1"
slab = "0.4.6"
socket2 = ">=0.5, <0.7"
tempfile = "3"
tempdir = "0.3"
thiserror = "2.0"
tinyvec = { version = "1.10", features = ["alloc"] }
tokio = { version = "1.49", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
    "tls12",
    "logging",
] }
tokio-util = { version = "0.7", features = ["full"] }
toml = "0.9"
toml_edit = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "time",
    "local-time",
] }
ts-rs = "12.0.1"
uniffi = { version = "=0.31.1", features = ["cli"] }
uuid = "1.20"
x509-parser = { version = "0.18", features = ["verify"] }
webpki-roots = "1.0"


# Nym Dependencies
nym-config = "1.21.4"
nym-bin-common = "1.21.4"


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }

