[package]
name = "bridge-cfg"
version = "0.1.2"
edition = "2024"

[dependencies]

anyhow.workspace = true
clap = { workspace = true, features = ["derive", "string"] }
ed25519-dalek = { version = "3.0", features = [
	"pkcs8",
	"alloc",
	"pem",
	"rand_core",
] }
rand = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
similar.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, default-features = false, features = [
	"env-filter",
	"fmt",
	"ansi",
	"time",
	"local-time",
] }
toml_edit.workspace = true
tempdir.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
	"json",
	"blocking",
	"rustls-tls",
] }

nym-bridges = { path = "../" }
nym-config = { git = "https://github.com/nymtech/nym.git" }
nym-bin-common = { git = "https://github.com/nymtech/nym.git" }
