[package]
name = "bridge-cfg"
version = "0.1.2"
edition = "2024"
publish = false
authors = ["Nym Technologies SA"]
description = "Configuration tooling for Nym transport bridges."
license = "AGPL-3.0-only"
repository = "https://github.com/nymtech/nym-bridges"
homepage = "https://nymtech.net"

[dependencies]

anyhow.workspace = true
clap = { workspace = true, features = ["derive", "string"] }
ed25519-dalek = { version = "2.2", features = [
	"pkcs8",
	"alloc",
	"pem",
	"rand_core",
] }
rand = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
similar.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, default-features = false, features = [
	"env-filter",
	"fmt",
	"ansi",
	"time",
	"local-time",
] }
toml_edit.workspace = true
tempdir.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
	"json",
	"blocking",
	"rustls-tls",
] }

nym-bridges = { path = "../", version = "0.1.2" }
nym-config = "1.21.3"
nym-bin-common = "1.21.3"
