[package]
name = "nym-bridge"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
quinn.workspace = true
rustls = { workspace = true, default-features = false, features = [
	"std",
	"ring",
	"logging",
] }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { workspace = true, default-features = false, features = [
	"ring",
	"tls12",
	"logging",
] }
tokio-util = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, default-features = false, features = [
	"env-filter",
	"fmt",
	"ansi",
	"time",
	"local-time",
] }


nym-bridges = { path = "../" }

nym-bin-common = { git = "https://github.com/nymtech/nym.git" }
