
[package]
name = "nym-bridges"

authors = ["Nym Technologies SA"]
version = "0.2.0"
edition = "2024"
description = "Pluggable transport library for securing and obfuscating Nym VPN traffic."
license = "AGPL-3.0-only"
repository = "https://github.com/nymtech/nym-bridges"
homepage = "https://nymtech.net"
readme = "README.md"
# Whitelist what ships in the published crate. The package root is the repo
# root, so without this the tarball would also bundle test-env/ (which holds
# private ed25519 and WireGuard keys) plus tests/, pkg/, Dockerfile and .github.
include = ["src/**/*.rs", "/README.md", "/LICENSE"]



[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[features]
default = ["serde"]
uniffi-bindings = ["nym-bridges-types/uniffi-bindings"]
typescript-bindings = ["nym-bridges-types/typescript-bindings"]
serde = ["nym-bridges-types/serde"]
# TODO: features that expose the featues of the types crate

[dependencies]
anyhow.workspace = true
base64.workspace = true
bs58.workspace = true
bytes.workspace = true
ed25519-dalek = { workspace = true, features = [
    "pkcs8",
    "alloc",
    "pem",
    "rand_core",
] }
futures.workspace = true
getrandom = { workspace = true, default-features = false }
hex.workspace = true
lru-slab.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
pin-project-lite.workspace = true
quinn-proto.workspace = true
quinn.workspace = true
rand = { workspace = true, features = ["thread_rng", "sys_rng"] }
rcgen.workspace = true
ring.workspace = true
rustc-hash.workspace = true
rustls = { workspace = true, default-features = false, features = [
    "std",
    "ring",
    "logging",
    "aws_lc_rs",
] }
rustls-pki-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
slab.workspace = true
socket2.workspace = true
thiserror.workspace = true
tinyvec = { workspace = true, features = ["alloc"] }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { workspace = true, default-features = false, features = [
    "ring",
    "tls12",
    "logging",
] }
tokio-util = { workspace = true, features = ["full"] }
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
x509-parser = { workspace = true, features = ["verify"] }
webpki-roots.workspace = true

nym-bridges-types = { path = "../nym-bridges-types" }


[dev-dependencies]
tracing-subscriber = { workspace = true, default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "time",
    "local-time",
] }
tempfile.workspace = true

